[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Pokemon_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://Debug.gd" type="Script" id=2]

[node name="Debug" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -160.0

[node name="Fps" type="Label" parent="Control"]
margin_right = 27.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "Fps: "

[node name="Fps_value" type="Label" parent="Control/Fps"]
unique_name_in_owner = true
margin_left = 24.0
margin_top = 1.0
margin_right = 64.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "1000"

[node name="V-sync" type="Label" parent="Control"]
margin_left = 169.0
margin_top = 3.0
margin_right = 209.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "V-sync"

[node name="V-sync-Buuton" type="CheckButton" parent="Control/V-sync"]
unique_name_in_owner = true
margin_left = 33.0
margin_top = -2.0
margin_right = 109.0
margin_bottom = 38.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 1 )
action_mode = 0

[node name="Win" type="Label" parent="Control"]
margin_left = 186.0
margin_top = 17.0
margin_right = 206.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 1 )
text = "Win"

[node name="Win_button" type="CheckBox" parent="Control/Win"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = -5.0
margin_right = 44.0
margin_bottom = 19.0

[node name="Lose" type="Label" parent="Control"]
margin_left = 186.0
margin_top = 32.0
margin_right = 206.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Lose"

[node name="Lose_button" type="CheckBox" parent="Control/Lose"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = -5.0
margin_right = 44.0
margin_bottom = 19.0

[node name="Total_loss" type="Button" parent="."]
unique_name_in_owner = true
modulate = Color( 1, 0, 0, 1 )
margin_left = 186.0
margin_top = 51.0
margin_right = 259.0
margin_bottom = 71.0
rect_scale = Vector2( 0.521331, 0.533739 )
text = "Total loss"

[connection signal="toggled" from="Control/V-sync/V-sync-Buuton" to="." method="_on_VsyncBuuton_toggled"]
[connection signal="pressed" from="Control/Win/Win_button" to="." method="_on_Winbutton_pressed"]
[connection signal="pressed" from="Control/Lose/Lose_button" to="." method="_on_Lose_button_pressed"]
[connection signal="pressed" from="Total_loss" to="." method="_on_Total_loss_pressed"]
